fix(hero): add margin on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -720,7 +720,7 @@ nav li a {
   .hero-section .hero-text {
     position: static;
     max-width: 100%;
-    margin-top: 2rem;
+    margin-top: 6rem;
   }
 
   .hero-section .hero-image {
